--- a/JavaSource/resources/database/DatabaseBackendConfig.xml.in
+++ b/JavaSource/resources/database/DatabaseBackendConfig.xml.in
@@ -3,45 +3,51 @@
   <!-- latest: read-write: -->
   <database
     name="SOCATFlags" driver="com.mysql.jdbc.Driver"
-    connectionURL="mysql://:3306/SOCATFlags?autoReconnect=true" 
-    user="******" password="******" 
-    updateUser="******" updatePassword="******" 
-    socatQCVersion="2021.0" 
-    dsgFileDir="******/DsgNcFiles" 
+    connectionURL="mysql://:3306/SOCATFlags?autoReconnect=true"
+    user="******" password="******"
+    updateUser="******" updatePassword="******"
+    socatQCVersion="2021.0"
+    dsgFileDir="******/DsgNcFiles"
     decDsgFileDir="******/DecDsgNcFiles"
     erddapDsgFlag="******/erddap/workspace/flag/socat_latest_fulldata"
     erddapDecDsgFlag="******/erddap/workspace/flag/socat_latest_decimated"
     addDataTypes="******/SocatUploadDashboard/config/DataTypes.properties"
     ferretConfig="******/SocatUploadDashboard/config/FerretConfig.xml"
   />
+  <!-- v2020: read-only: -->
+  <database
+    name="SOCATv2020" driver="com.mysql.jdbc.Driver"
+    connectionURL="mysql://:3306/SOCATv2020?autoReconnect=true"
+    user="******" password="******"
+  />
   <!-- v2019: read-only: -->
   <database
     name="SOCATv2019" driver="com.mysql.jdbc.Driver"
-    connectionURL="mysql://:3306/SOCATv2019?autoReconnect=true" 
-    user="******" password="******" 
+    connectionURL="mysql://:3306/SOCATv2019?autoReconnect=true"
+    user="******" password="******"
   />
   <!-- v6: read-only: -->
   <database
     name="SOCATv6" driver="com.mysql.jdbc.Driver"
-    connectionURL="mysql://:3306/SOCATv6?autoReconnect=true" 
-    user="******" password="******" 
+    connectionURL="mysql://:3306/SOCATv6?autoReconnect=true"
+    user="******" password="******"
   />
   <!-- v5: read-only: -->
   <database
     name="SOCATv5" driver="com.mysql.jdbc.Driver"
-    connectionURL="mysql://:3306/SOCATv5?autoReconnect=true" 
-    user="******" password="******" 
+    connectionURL="mysql://:3306/SOCATv5?autoReconnect=true"
+    user="******" password="******"
   />
   <!-- v4: read-only: -->
   <database
     name="SOCATv4" driver="com.mysql.jdbc.Driver"
-    connectionURL="mysql://:3306/SOCATv4?autoReconnect=true" 
-    user="******" password="******" 
+    connectionURL="mysql://:3306/SOCATv4?autoReconnect=true"
+    user="******" password="******"
   />
   <!-- v3: read-only: -->
   <database
     name="SOCATv3" driver="com.mysql.jdbc.Driver"
-    connectionURL="mysql://:3306/SOCATv3?autoReconnect=true" 
-    user="******" password="******" 
+    connectionURL="mysql://:3306/SOCATv3?autoReconnect=true"
+    user="******" password="******"
   />
 </databases>
